--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="scoreChangeText">00</string>
     <string name="gameName">game name</string>
     <string name="_00">00</string>
+    <string name="menu_settings">Settings</string>
+    <string name="menu_about">about</string>
 </resources>
